modified:   README.md 	modified:   config.json 	modified:   exifReporter.py 	modified:   layout/report.html

--- a/layout/report.html
+++ b/layout/report.html
@@ -52,7 +52,7 @@
             font-size: 0.9em;
             font-family: sans-serif;
             min-width: 600px;
-            border: 1px solid #333;
+            border: 2px solid #333;
 /*             
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
         }
@@ -77,7 +77,7 @@
         }
 
         .exif-table tbody tr:last-of-type {
-            border-bottom: 2px solid #009879;
+            border-bottom: 2px solid #300ef5;
         }
 
 
@@ -87,12 +87,11 @@
 <body>
     <header>
         <h1>{{title}} - {{report_name}}</h1>
-        
     </header>
     
     <section>
         <table class="exif-table-main">
-            <caption>{{report_description}}</caption>
+            <caption><h3>{{report_description}}</h3></caption>
             <tr>
                 <th align="left"></th>
                 <th align="left"></th>
